# Linear-Interpolator-V2

./: .gitignore  README.md  build_tauri.py  commit_plan_december_2024.md  empty_commit_plan_december_2024.md  tauri.conf.json
Frontend/scaling/: package-lock.json
Frontend/scaling/app/: globals.css  page.tsx
Frontend/scaling/components/: scaling-range-modal.tsx
backend/: requirements.txt  scaling_logic.py  tauri_backend.py  test_api.py  test_scaling_logic.py
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
